@@ -1,7 +1,9 @@
 Since 1.6.2:
+  - New: Julia interface is available (https://github.com/peterwittek/Somoclu.jl).
   - New: Method `get_surface_state` of the `Somoclu` object in Python calculates the activation map for all data instances.
   - New: Method `view_activation_map` of the `Somoclu` object in Python allows plotting the activation map for the training data instances or for a new data instance.
   - New: Method `view_similarity_matrix` of the `Somoclu` object in Python visualizes the similarity matrix of data points according to their distance to the nodes in the map.
+  - Fixed: CRAN-friendliness improved.
 
 Version 1.6.2: 2016-08-09
   - Changed: In-place codebook updates when compiled without MPI. This improves update speed and substantially cuts memory use.
